--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :primary_contact, "Fair Manager (First and Last)" %> <span class="required">*</span><br>
+    <%= f.label :primary_contact, "Primary Contact (First and Last)" %> <span class="required">*</span><br>
     <%= f.text_field :primary_contact %>
   </div>
   <div class="field">
