--- a/app/views/awards/show.html.erb
+++ b/app/views/awards/show.html.erb
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<p><a href="#" class="showSingle" id="0">Award Overview</a></p>
-			<% @award.categories.sort_by_category_codes(Category.all).each do |category| %>
+			<% @award.categories.sort_by_category_codes(Category.includes(:award)).each do |category| %>
 				<% if category.award_id == @award.id %>
 					<p><a href="#" class="showSingle" id="<%= category.id %>"><%= category.code %>: <%= category.name %></a></p>
 				<% end %>
@@ -28,7 +28,7 @@
 				<h2>Rules for All Entries in this Section</h2>
 				<p><%= sanitize(@award.rules) %></p>
 			</div>
-			<% @award.categories.sort_by_category_codes(Category.all).each do |category| %>
+			<% @award.categories.sort_by_category_codes(Category.includes(:award)).each do |category| %>
 				<% if category.award_id == @award.id %>
 					<div id="div<%= category.id %>" class="idDiv">
 						<h3><%= category.name %></h3>
