--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -10,6 +10,8 @@
       </ul>
     </div>
   <% end %>
+  
+  <% if Time.now < @actual_deadline + 1 %>
 
   <div class="field">
     <%= f.label :organization_id %> <span class="required">*</span><br>
@@ -36,4 +38,11 @@
   <div class="actions"><br/>
     <p><%= f.submit "Submit Dates and Attendance" %></p>
   </div>
+  
+  <% else %>
+    
+    <p class="important">The deadline has passed for the current contest year. Please add/edit your dates and attendance once the new contest year as started.</p>
+    
+  <% end %>
+  
 <% end %>
