--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
         <p><a class="btn btn-primary btn-lg" role="button">Learn More &raquo;</a>
         	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a>
         </p>
-        <p>The deadline for the <%= Time.now.year %> contest is October 3.</p>
+        <p>The deadline for the <%= @deadline.strftime('%Y') %> contest is <%= @deadline.strftime('%B %e') %>.</p>
       </div>
     </div>
 
