--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -14,43 +14,61 @@
 	
 <h1>My Submissions</h1>
 
-<p><%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %></p>
+<% if Time.now < @actual_deadline + 1 %>
+  <p><%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %></p>
 
-<% current_user.user_organizations.each do |user_organization| %>
-  <% if user_organization.organization.fair == true %>
-	<% if user_organization.organization.submission_division != '' %>
-	  <p class="bold"><span class="italic"><%= user_organization.organization.name %></span> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date.to_formatted_s(:long)  %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date.to_formatted_s(:long)  %> and its <%= Time.now.year - 1 %> attendance was <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under Division <%= user_organization.organization.submission_division %> for this year's contest. <%= link_to 'Edit these dates/attendance', edit_organization_detail_path(user_organization.organization.organization_details.order('created_at DESC').first) %></p>
-	 <% else %>
-	   <p class="important">Total attendance/fair dates for the <%= user_organization.organization.name %> has not been inputted for the <%= Time.now.year %> contest. <%= link_to 'Add fair dates/attendance now.', new_organization_detail_path %></p>
-     <% end %>
+  <% current_user.user_organizations.includes(:organization).each do |user_organization| %>
+    <% if user_organization.organization.fair == true %>
+	  <% if user_organization.organization.submission_division != '' %>
+	    <p class="bold"><span class="italic"><%= user_organization.organization.name %></span> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date.to_formatted_s(:long)  %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date.to_formatted_s(:long)  %> and its <%= Time.now.year - 1 %> attendance was <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under <span class="underline">Division <%= user_organization.organization.submission_division %></span> for this year's contest. <%= link_to 'Edit these dates/attendance', edit_organization_detail_path(user_organization.organization.organization_details.order('created_at DESC').first) %></p>
+	   <% else %>
+	     <p class="important">Total attendance/fair dates for the <%= user_organization.organization.name %> has not been inputted for the <%= Time.now.year %> contest. <%= link_to 'Add fair dates/attendance now.', new_organization_detail_path %></p>
+       <% end %>
+    <% end %>
   <% end %>
-<% end %>
 
-<p>Note: You will be able to add digital files or edit your submission as long as the submission's status is pending or incomplete. The IAFE will wait at least 12 hours to approve or reject once a new submission is created.</p>
+  <p>Note: You will be able to add digital files or edit your submission as long as the submission's status is pending or incomplete. The IAFE will wait at least 12 hours to approve or reject once a new submission is created.</p>
+
+<% else %>
+
+  <p class="important">The deadline has passed for the current contest year. Submission creation has closed. See you next year!</p>
+
+<% end %>
 
 <% @paginate.each do |contest| %>
   <div class="submissionheading"><h2><%= contest.contest_year %>: <%= contest.organization.name %></h2></div>
-  <% current_user.submissions.order('created_at DESC').where(organization_id: contest.organization_id, contest_year: contest.contest_year).in_groups_of(3, false) do |group| %>
+  <% current_user.submissions.includes(:submission_details, :user, category: :award).order('created_at DESC').where(organization_id: contest.organization_id, contest_year: contest.contest_year).in_groups_of(3, false) do |group| %>
     <div class="row">
     <% group.each do |submission| %>
       <div class="col-md-4">
           <p class="bold"><%= submission.category.award.name %> <%= submission.category.code %>: <%= submission.category.name %></p>
           <p>Submitted By: <%= submission.user.first_name %> <%= submission.user.last_name %></p>
-          <% if submission.status == 'Approved' %>
-            <p class="completed">Status: Approved</p>
-          <% elsif submission.status == 'Pending' %>
-            <p class="pending">Status: Pending for IAFE Staff to Process</p>
-          <% elsif submission.status == 'Rejected' %>
-            <p class="rejected">Status: Rejected</p>
-          <% elsif submission.status == 'Pending' %>
-            <p class="pending">Status: Incomplete, <%= link_to 'please upload document/link', new_submission_submission_detail_path(submission) %></p>
+          <% if submission.disqualify == true %>
+            <p class="rejected">This entry was disqualified</p>
+            <p><span class="bold">Disqualification Reason:</span> <%= submission.disqualify_reason %></p>
+          <% else %>
+            <% if submission.status == 'Approved' %>
+              <p class="completed">Status: Approved</p>
+            <% elsif submission.status == 'Pending' %>
+              <p class="pending">Status: Pending for IAFE Staff to Process</p>
+            <% elsif submission.status == 'Rejected' %>
+              <p class="rejected">Status: Rejected</p>
+            <% elsif submission.status == 'Pending' %>
+              <p class="pending">Status: Incomplete, <%= link_to 'please upload document/link', new_submission_submission_detail_path(submission) %></p>
+            <% end %>
+          <% end %>
+          <% if submission.scores.where("comments <> ''").count > 0 %>
+            <p class="bold">Judge's Comments:</p>
+            <% submission.scores.includes(:submission).where("comments <> ''").each do |c| %>
+              <p>"<%= c.comments %>"</p>
+            <% end %>
           <% end %>
           <p>Uploaded Documents/Links (click image/link to edit/view):</p>
           <p>
           <% if submission.submission_details.count > 1 %>
             <div class="slider">
           <% end %>
-          <% submission.submission_details.each do |submission_detail| %>
+          <% submission.submission_details.includes(:submission).each do |submission_detail| %>
             <% if submission.category.submission_file_type == "URL Link Only" || submission.category.submission_file_type == "Video Only" %>
               <%= link_to 'Submission Link', submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
             <% else %>
@@ -61,7 +79,11 @@
             </div>
           <% end %>
           </p>
-          <% if submission.status == 'Pending' || submission.status == 'Incomplete' %><p><%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %> | <%= link_to 'Delete Submission', submission, method: :delete, data: { confirm: 'Are you sure?' } %></p><% end %>
+          <% if Time.now < @actual_deadline + 1 %>
+            <% if submission.status == 'Pending' || submission.status == 'Incomplete' %>
+              <p><%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %> | <%= link_to 'Delete Submission', submission, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            <% end %>
+          <% end %>
       </div>
     <% end %>
   </div><br/>
