--- a/app/views/user_organizations/_form.html.erb
+++ b/app/views/user_organizations/_form.html.erb
@@ -29,9 +29,9 @@
     <%= f.label :organization_id, "Please select the organization you are with. You can assign yourself to multiple organizations; for 
     example, if you are with a third-party agency submitting on behalf of a fair, you must assign yourself to that agency first as 
     your primary organization." %><br>
-    <%= collection_select(:user_organization, :organization_id, Organization.all, :id, :name_and_state, 
+    <%= collection_select(:user_organization, :organization_id, Organization.where(enabled: true), :id, :name_and_state, 
     include_blank: "Select your organization") %>&nbsp;&nbsp;<span class="required">*</span><br>
-	<p><%= link_to "Don't see your organization? Click here to add it first.", new_organization_path %></p>
+	<p><%= link_to "Don't see your organization? Click here to add it to our database first.", new_organization_path %></p>
   </div>
   <div class="field">
     <%= f.label :primary, "Is this your primary organization for this contest site?" %> <span class="required">*</span><br>
