--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-	<h1>About Contest and the IAFE</h1>
+	<h1>About the Contest Program and the IAFE</h1>
+	
+	<div style="width:219px;" class="right"><img src="/images/template/trophy.jpg" alt="Sweepstakes Trophy" width="219" height="281" style="max-width:219px; max-height:281px; width:100%; height:100%;"/><p class="italic">Pictured: the sweepstakes trophy--it could be yours!</p></div>
 	
 	<p>The International Association of Fairs and Expositions annually awards excellence in fair programming through four educational contests. The Annual IAFE Awards contests are divided into various areas of fair programming including: <span class="special">Agriculture, Competitive Exhibits, Communications, and Sponsorship.</span> These educational contests allow fair members to submit award winning ideas and programs into categories within each contest.  Examples include: advertising posters, radio/TV spots, agriculture education programs, competitive exhibit display methods, and photos.</p>
 	
@@ -9,5 +11,7 @@
     
     <p>So do you have a sophisticated commemorative poster? Do you have a radio spot that seems to carry a tune in a bucket? Are you proud of how grandma's fudge, tomatoes, and quilts are displayed at your fair? Is your agricultural programming for youth exhibitors top notch? Then what are you waiting for? Create an account and get started today!</p>
 
+	<img src="/images/template/iafethenetwork.png" alt="IAFE The Network" class="left" width="398" height="106" style="max-width:398px; max-height:106px; width:100%; height:100%;"/>
+	
 	<p><span class="special">The International Association of Fairs and Expositions (IAFE)</span> is a voluntary, not-for-profit corporation, serving state, provincial, regional, and county agricultural fairs, shows, exhibitions, and expositions. Its associate members include state and provincial associations of fairs, non-agricultural expositions and festivals, associations, corporations, and individuals engaged in providing products and services to its members, all of whom are interested in the improvement of fairs and allied fields. More information about the IAFE and membership can be found at <a href="https://www.fairsandexpos.com" target="_blank">www.fairsandexpos.com</a>.</p>
 </div>
