--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 	<h1>Contact Us</h1>
+	<img src="/images/template/iafethenetwork.png" alt="IAFE The Network" class="right" width="398" height="106" style="max-width:398px; max-height:106px; width:100%; height:100%;"/>
 	<p>Physical contest entries must be mailed to the following address:</p>
 	<p>IAFE<br/>
 	3043 East Cairo St.<br/>
