--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -8,7 +8,9 @@
     margin-right: 50px;
     padding-bottom: 10px;
     width: 100%;
+    height: 100%;
     max-width: 350px;
+    max-height: 204px;
   }
   
   .social {
