--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">IAFE Contest</a>
+      <a class="navbar-brand" href="/">IAFE Contest</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
