--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,12 @@
 
     <div class="jumbotron">
       <div class="container">
-        <img src="/images/template/logo.png" class="logo"/>
+        <img src="/images/template/logo.png" class="logo" width="350" height="204"/>
         <p>Each year, the IAFE conducts contests for its fair members, which recognize and reward excellence. All contests are judged by IAFE member representatives and professionals from respective fields.</p>
-        <div class="icons right"><a href="https://www.facebook.com/pages/IAFE-The-Network/87203559642?ref=nf" target="_blank"><img src="/images/template/facebook.png" class="social"/></a><a href="https://twitter.com/iafe" target="_blank"><img src="/images/template/twitter.png" class="social"/></a><a href="https://www.youtube.com/user/IAFEtheNetwork" target="_blank"><img src="/images/template/youtube.png" class="social"/></a></div>
+        <div class="icons right">
+          <a href="https://www.facebook.com/pages/IAFE-The-Network/87203559642?ref=nf" target="_blank"><img src="/images/template/facebook.png" class="social" width="42" height="32"/></a>
+          <a href="https://twitter.com/iafe" target="_blank"><img src="/images/template/twitter.png" class="social" width="42" height="32"/></a>
+          <a href="https://www.youtube.com/user/IAFEtheNetwork" target="_blank"><img src="/images/template/youtube.png" class="social" width="42" height="32"/></a></div>
         <p><a class="btn btn-primary btn-lg" role="button">Learn More &raquo;</a>
         	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a>
         </p>
