--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>IAFE Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="The IAFE annually awards excellence in fair programming through four educational contests: Agriculture, Competitive Exhibits, Communications, and Sponsorship."/>
+  <link rel="icon" href="/images/template/favicon.ico" type="image/x-icon">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <script>
