--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,15 @@
         <p><a class="btn btn-primary btn-lg" role="button">Learn More &raquo;</a>
         	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a>
         </p>
-        <p>The deadline for the <%= @deadline.strftime('%Y') %> contest is <%= @deadline.strftime('%B %e') %>.</p>
+        <p>The deadline for the <%= @deadline.strftime('%Y') %> contest is <%= @deadline.strftime('%B %e') %>.
+
+<span class="countdown">
+<span class="days">00</span><span class="seperator">d</span>
+<span class="hours">00</span><span class="seperator">h</span>
+<span class="minutes">00</span><span class="seperator">m</span>
+<span class="seconds">00</span><span class="seperator">s</span>
+</span>
+<script type="text/javascript">$('.countdown').downCount({ date: '<%= @deadline + 2 %>', offset: +14});</script></p>
       </div>
     </div>
 
