--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   
-  <% if Time.now < @actual_deadline + 1 %>
+  <% if Time.now < @award_deadline.actual_deadline + 1 %>
 
   <div class="field">
     <%= f.label :organization_id %> <span class="required">*</span><br>
