--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -45,3 +45,8 @@
 .btn-lg:hover {
   background-color: $theme-color2;
 }
+
+.btn-primary:link, .btn-primary:hover, .btn-primary:active, .btn-primary:visited, .btn-primary:focus {
+  color: #ffffff;
+  text-decoration: none;
+}
