--- a/app/views/awards/show.html.erb
+++ b/app/views/awards/show.html.erb
@@ -7,17 +7,68 @@
     });
 });</script>
 
+<style>
+
+ul li.rules {
+	list-style-type: none;
+	margin-bottom: 10px;
+	margin-left: -30px;
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+@media (min-width: 993px) {
+  .small_rules {
+  	display: none;
+  }
+}
+
+@media (max-width: 992px) {
+  ul.ulrules {
+  	margin-left: 0px;
+  	padding-left: 0px;
+  }
+  ul li.rules {
+    display: inline-block;
+    margin-left: 0;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    width:115px;
+  }
+  .large_rules {
+  	display: none;
+  }
+}
+</style>
+
 <div class="container">
 	<p id="notice"><%= notice %></p>
 	<h1><%= @award.name %></h1>
 	<div class="row">
+      <div class="large_rules">
 		<div class="col-md-4">
-			<p><a href="#" class="showSingle" id="0">Award Overview</a></p>
+			<ul class="ulrules">
+			<li class="rules"><a href="#" class="showSingle" id="0">Award Overview</a></li>
 			<% @award.categories.sort_by_category_codes(Category.includes(:award)).each do |category| %>
 				<% if category.award_id == @award.id && category.enabled == true %>
-					<p><a href="#" class="showSingle" id="<%= category.id %>"><%= category.code %>: <%= category.name %></a></p>
+					<li class="rules"><a href="#" class="showSingle" id="<%= category.id %>"><%= category.code %>: <%= category.name %></a></li>
 				<% end %>
 			<% end %>
+			</ul>
+		</div>
+		</div>
+		<div class="small_rules">
+		<div class="col-md-4">
+			<ul class="ulrules">
+			<li class="rules"><a href="#" class="showSingle" id="0">Overview</a></li>
+			<% @award.categories.sort_by_category_codes(Category.includes(:award)).each do |category| %>
+				<% if category.award_id == @award.id && category.enabled == true %>
+					<li class="rules"><a href="#" class="showSingle" id="<%= category.id %>">Category <%= category.code %></a></li>
+				<% end %>
+			<% end %>
+			</ul>
+		</div>
 		</div>
 		<div class="col-md-8">
 			<div id="div0" class="idDiv">
