--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,8 +8,8 @@
           <a href="https://www.facebook.com/pages/IAFE-The-Network/87203559642?ref=nf" target="_blank"><img src="/images/template/facebook.png" class="social" width="42" height="32"/></a>
           <a href="https://twitter.com/iafe" target="_blank"><img src="/images/template/twitter.png" class="social" width="42" height="32"/></a>
           <a href="https://www.youtube.com/user/IAFEtheNetwork" target="_blank"><img src="/images/template/youtube.png" class="social" width="42" height="32"/></a></div>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn More &raquo;</a>
-        	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a>
+        <p><%= link_to "Learn More »", about_path, class: "btn btn-primary btn-lg", role: "button" %>
+        	<%= link_to "Create an Account »", new_user_session_path, class: "btn btn-primary btn-lg", role: "button" %>
         </p>
         <p>The deadline for the <%= @award_deadline.deadline.strftime('%Y') %> contest is <%= @award_deadline.deadline.strftime('%B %e') %>.
 
