--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-$grid-float-breakpoint: 880px;
+@import url(http://fonts.googleapis.com/css?family=Lobster);
 
 @import "bootstrap";
 @import "select2";
