--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -37,6 +37,17 @@
 
 <% end %>
 
+<% @paginate.each do |contest| %>
+  <div class="submissionheading"><h2><%= contest.contest_year %>: <%= contest.organization.name %></h2></div>
+  <% current_user.submissions.includes(:submission_details, :user, category: :award).order('created_at DESC').where(organization_id: contest.organization_id, contest_year: contest.contest_year).in_groups_of(3, false) do |group| %>
+    <div class="row">
+    <% group.each do |submission| %>
+      
+    <% end %>
+  </div><br/>
+  <% end %>
+<% end %>
 
+<p><%= paginate @paginate %></p>
 
 </div>
