--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="container"> 
-      <% @awards.where(enabled: true).in_groups_of(3, false).each do |group| %>
+      <% @awards.where(enabled: true).order('created_at ASC').in_groups_of(3, false).each do |group| %>
         <div class="row">
           <% group.each do |award| %>
             <div class="col-md-4">
