--- a/app/views/static_pages/instructions.html.erb
+++ b/app/views/static_pages/instructions.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class='col-md-4'>
 			<h3>1. Sign In or Create a New User Account</h3>
-			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="bold italic">Your login information for this site is not connected to your www.fairsandexpos.com login (though it can be the same if you input the same username/password).</span></p>
+			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="bold italic">Your login information for this site is not connected to your www.fairsandexpos.com login (though it can be the same if you input the same username and password when you create an account).</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>2. Link Your Organization to Your User Account</h3>
