--- a/app/views/admin/judges/sheet.pdf.erb
+++ b/app/views/admin/judges/sheet.pdf.erb
@@ -1,16 +1,24 @@
 <style>
 	table {
 		width: 900px;
+		font-family: "Times New Roman", serif;
 	}
 	
 	td {
 		border: 1px solid #000000;
+		font-family: "Times New Roman", serif;
     }
     
     p {
     	font-family: "Times New Roman", serif;
     }
+    
+    li {
+    	font-family: "Times New Roman", serif;
+    }
 </style>
+
+<div style="width: 900px;">
 
 <p style="text-align: center; font-size: 36px;"><%= Time.now.year %> <%= @judge.category.award.name %> Program<br/>
 	Score Card</p>
@@ -58,3 +66,5 @@
 </ol>
 
 <p style="font-style: italic; font-size: 20px;">Please use the below space for writing notes:</p>
+
+</div>
